# env-alert

./: .gitignore  .pre-commit-hook.sh  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  reporter.rs  rules.rs  scanner.rs
src/patterns/: credentials.rs  env_files.rs  mod.rs  secrets.rs  tokens.rs
tests/: integration_test.rs
tests/fixtures/: sample.env
